# OPGEEv4

./: .gitignore  .pdm-python  Makefile-tmp  opgee.conda-lock.yml  opgee.pkg_list.txt  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.github/workflows/: build-release.yml
docs/source/: install.rst
opgee/: XMLFile.py  __init__.py  analysis.py  attributes.py  audit.py  bfs.py  combine_streams.py  config.py  constants.py  container.py  core.py  emissions.py  energy.py  error.py  field.py  graph.py  import_export.py  log.py  main.py  manager.py  model.py  model_file.py  pkg_utils.py  post_processor.py  process.py  process_groups.py  smart_defaults.py  stream.py  subcommand.py  table_manager.py  table_update.py  thermodynamics.py  tool.py  units.py  utils.py  version.py  xml_utils.py
opgee/built_ins/: __init__.py  collect_plugin.py  compare_excel.py  compare_plugin.py  config_plugin.py  csv2xml_plugin.py  gensim_plugin.py  graph_plugin.py  gui_plugin.py  merge_plugin.py  run_plugin.py  update_plugin.py
opgee/etc/: attributes.xml  opgee.xml  pluginTemplate.py  system.cfg
opgee/gui/: app.py  process_pane.py  results_pane.py  settings_pane.py  testapp.py  widgets.py
opgee/mcs/: LHS.py  distributed_mcs_dask.py  distro.py  parameter_list.py  simulation.py
opgee/processes/: CO2_injection_well.py  CO2_membrane.py  CO2_reinjection_compressor.py  LNG_liquefaction.py  LNG_regasification.py  LNG_transport.py  VF_partition.py  VRU_compressor.py  __init__.py  acid_gas_removal.py  bitumen_mining.py  compressor.py  crude_oil_dewatering.py  crude_oil_stabilization.py  crude_oil_storage.py  crude_oil_transport.py  demethanizer.py  downhole_pump.py  drilling.py  exploration.py  flaring.py  gas_dehydration.py  gas_distribution.py  gas_gathering.py  gas_lifting_compressor.py  gas_partition.py  gas_reinjection_compressor.py  gas_reinjection_well.py  heavy_oil_dilution.py  heavy_oil_upgrading.py  natural_gas_liquid.py  petrocoke_transport.py  post_storage_compressor.py  pre_membrane_chiller.py  pre_membrane_compressor.py  reservoir_well_interface.py  ryan_holmes.py  separation.py  shared.py  sour_gas_compressor.py  (+10 more)
opgee/tables/: grid_mix_EF.csv  grid_mix_feed.csv
src/opgee/: field.py  manager.py  model_file.py  post_processor.py  stream.py  utils.py
src/opgee/etc/: opgee.xml
tests/: BROKEN_test_smart_defaults.py  conftest.py  test_attr_constraints.py  test_attributes.py  test_audit.py  test_boundary.py  test_boundary_procs.py  test_coeff.py  test_comparison.py  test_config.py  test_core.py  test_csv2xml.py  test_distributed_mcs.py  test_emissions.py  test_energy.py  test_field.py  test_field_groups.py  test_graph.py  test_import_export.py  test_impute.py  test_intermediate_boundary.py  test_mcs.py  test_merge_xml.py  test_model.py  test_model_file.py  test_molecule_names.py  test_opgee_xml.py  test_packet.py  test_post_proc_plugin.py  test_process_groups.py  test_process_loop.py  test_processes.py  test_run_subcmd.py  test_smart_defaults.py  test_stream.py  test_table_manager.py  test_thermofunction.py  test_utils.py  test_xml_file.py  utils_for_tests.py
tests/files/: audit_model.xml  broken_post_proc_plugin.py  simple_post_processor.py  test_boundary.xml  test_model.xml  user_processes.py
(+5 files in other folders)
