[project]
name = "opgee"
version = "4.0.1a1"
description = "Python 3 package implementing life cycle analysis of oil fields"
authors = [
  { name = "Michael Barlow", email = "mbarlow@rmi.org" },
  { name = "Richard Plevin", email = "rich@plevin.com" },
]
dependencies = [
  "chemicals>=1.2.0",
  "dash>=2.18.1",
  "dash-core-components>=2.0.0",
  "dash-cytoscape>=1.0.2",
  "dash-html-components>=2.0.0",
  "dash-table>=5.0.0",
  "dask>=2024.10.0",
  "dask-jobqueue>=0.9.0",
  "fluids>=1.0.26",
  "lxml>=5.3.0",
  "networkx>=3.4.2",
  "numpy>=1.26.4",
  "pandas>=2.2.3",
  "pint>=0.24.3",
  "pint-pandas==0.6.2",
  "pydot>=3.0.2",
  "python-dateutil>=2.9.0.post0",
  "pyxsteam>=0.4.9",
  "scipy>=1.14.1",
  "semver>=3.0.2",
  "sphinx>=8.1.3",
  "sphinx-argparse>=0.5.2",
  "sphinx-rtd-theme>=3.0.1",
  "thermo>=0.3.0",
  "thermosteam>=0.45.0",
]
requires-python = ">=3.11"
readme = "README.md"
license-files = ["LICENSE.txt"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/RMI/OPGEEv4"
Downloads = "https://github.com/RMI/OPGEEv4.git"

[project.scripts]
opg = "opgee.tool:main"

[tool.setuptools.packages.find]
include = ["opgee*"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.8.3"]
